--- a/views/cart/index.handlebars
+++ b/views/cart/index.handlebars
@@ -51,7 +51,7 @@
   <p class="card-text">
     <form action="cart/removeAll" method="post">
       <button type="submit" class="btn btn-danger">Destroy Everything</button>
-      <button href="/checkouts/new" class="btn btn-success" type="button" name="button">Checkout</button>
+      <a href="checkouts"  type="button" class="btn btn-success" name="button">Checkout</a>
     </form>
   </p>
 {{else }}
