--- a/public/css/style.css
+++ b/public/css/style.css
@@ -15,12 +15,16 @@ h1 {
 
 body {
   font-family: "Source Sans Pro", Arial, sans-serif;
-  padding: 120px 0 50px 0;
+  padding: 76px 0 50px 0;
   background-color: #f3f3f3;
 }
 
 nav {
   box-shadow: 0 2px 5px rgba(0,0,0,.2);
+}
+
+main {
+  margin-top: 40px;
 }
 
 .navbar-brand {
