buttom on checkout styling

--- a/views/cart/index.handlebars
+++ b/views/cart/index.handlebars
@@ -49,9 +49,9 @@
     Total: {{currency total}}
   </div>
   <p class="card-text">
-    <form action="cart/removeAll" method="post">
+    <form class=""action="cart/removeAll" method="post">
       <button type="submit" class="btn btn-danger">Destroy Everything</button>
-      <a href="checkouts"  type="button" class="btn btn-success" name="button">Checkout</a>
+      <a href="checkouts"   class="btn btn-success" name="button">Checkout</a>
     </form>
   </p>
 {{else }}
