--- a/views/products/index.handlebars
+++ b/views/products/index.handlebars
@@ -48,7 +48,7 @@
 
 
     </div>
-    <button type="submit" class="btn btn-primary col-sm-1">Search</button>
+    <button type="submit" class="btn btn-primary col-sm-1">Find</button>
   </div>
    </form>
 </header>
