--- a/views/products/_product.handlebars
+++ b/views/products/_product.handlebars
@@ -1,4 +1,4 @@
-<div class="col-sm-4">
+<div class="col-sm-4 thumb-height">
   <div class="card my-3">
     <a href="/products/{{ product.id }}">
       <img class="card-img-top gallery-image" src="{{product.img}}">
@@ -17,9 +17,6 @@
         <a href="/categories/{{ product.Category.id }}">
           {{product.Category.name}}
         </a>
-      </p>
-      <p class="card-text">
-        {{product.description}}
       </p>
       {{> shared/_cartButton cartIds=cartIds productId=product.id}}
     </div>
