--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -14,6 +14,7 @@
   </head>
   <body>
     {{> shared/_nav }}
+    {{> shared/_flash }}
     <main class="container">
       {{{ body }}}
     </main>
