--- a/views/products/index.handlebars
+++ b/views/products/index.handlebars
@@ -2,7 +2,7 @@
   <h1 class="mb-4">Products</h1>
 </header>
 
-<form class="form-inline mb-3" action="/products" method="get">
+<form class="form-inline mb-3" action="{{ productsPath }}" method="get">
   <input type="text" class="form-control mx-1 my-2" name="search" id="search" placeholder="Name of product">
   <select class="form-control mx-1 my-2" name="category" id="category">
     <option value="">Category</option>
