--- a/public/css/style.css
+++ b/public/css/style.css
@@ -23,8 +23,16 @@ nav {
   box-shadow: 0 2px 5px rgba(0,0,0,.2);
 }
 
+.alert {
+  position: fixed;
+  width: 100%;
+  height: 52px;
+  z-index: 1;
+  top: 76px;
+}
+
 main {
-  margin-top: 40px;
+  margin-top: 66px;
 }
 
 .navbar-brand {
