i should probably stop

--- a/views/products/_product.handlebars
+++ b/views/products/_product.handlebars
@@ -1,5 +1,5 @@
-<div class="col-sm-4 thumb-height">
-  <div class="card my-3">
+<div class="col-sm-4">
+  <div class="card my-3 thumb-height">
     <a href="/products/{{ product.id }}">
       <img class="card-img-top gallery-image" src="{{product.img}}">
     </a>
