--- a/views/shared/_cartButton.handlebars
+++ b/views/shared/_cartButton.handlebars
@@ -1,8 +1,9 @@
 {{#if (alreadyInCart cartIds productId)}}
-  <a href="/cart#product{{product.id}}" type="submit" class="btn btn-success">View in Cart</a>
+  <a href="/cart#product{{product.id}}" class="btn btn-success">View in Cart</a>
 {{else}}
   <form action="/cart" method="post">
     <input type="hidden" name="id" value="{{ product.id }}">
-    <button type="submit" class="btn btn-primary">+ Cart</button>
+    <button  type="submit" class="btn btn-primary">+ Cart</button>
   </form>
+
 {{/if}}
