--- a/views/shared/_nav.handlebars
+++ b/views/shared/_nav.handlebars
@@ -21,7 +21,7 @@
           </a>
           <div class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
             <a class="dropdown-item" href="{{ cartPath }}">View Cart</a>
-            <a class="dropdown-item" href="{{ clearCartPath }}">Remove All Items</a>
+            <a class="dropdown-item" href="{{ destroyCartPath }}">Remove All Items</a>
           </div>
         </li>
         <li class="nav-item">
