update readme and increase product limit per page

--- a/views/analytics/index.handlebars
+++ b/views/analytics/index.handlebars
@@ -89,7 +89,7 @@
                         Total Revenue
                       </td>
                       <td>
-                        {{ formatCurrency totals.totalRevenue}}</a>
+                        {{ formatCurrency totals.overview.totalRevenue}}</a>
                       </td>
                     </tr>
                     <tr>
@@ -97,7 +97,7 @@
                         Total Units Sold
                       </td>
                       <td>
-                        {{ totals.totalUnitsEver}}
+                        {{ totals.overview.totalUnitsEver}}
                       </td>
                     </tr>
                     <tr>
@@ -105,7 +105,7 @@
                         Total Transactions
                       </td>
                       <td>
-                        {{ totals.totalTransactions }}
+                        {{ totals.overview.totalTransactions }}
                       </td>
                     </tr>
                     <tr>
