move icons into folder, replace pixabay image links with our own images

--- a/views/shared/_nav.handlebars
+++ b/views/shared/_nav.handlebars
@@ -8,13 +8,13 @@
       <ul class="navbar-nav ml-auto">
         <li class="nav-item active">
           <a class="nav-link" href="/products">
-            <img class="nav-image" src="/images/products.svg">
+            <img class="nav-image" src="/images/icons/products.svg">
             <span class="sr-only">(current)</span>
           </a>
         </li>
         <li class="nav-item">
           <a class="nav-link" href="{{ cartPath }}">
-            <img class="nav-image" src="/images/cart.svg">
+            <img class="nav-image" src="/images/icons/cart.svg">
             {{#if cartQuantity}}
               <span class="ml-1">({{ cartQuantity }})</span>
             {{/if}}
@@ -22,17 +22,17 @@
         </li>
         <li class="nav-item">
           <a class="nav-link" href="/orders">
-            <img class="nav-image" src="/images/orders.svg">
+            <img class="nav-image" src="/images/icons/orders.svg">
           </a>
         </li>
         <li class="nav-item">
           <a class="nav-link" href="/analytics">
-            <img class="nav-image" src="/images/analytics.svg">
+            <img class="nav-image" src="/images/icons/analytics.svg">
           </a>
         </li>
         <li class="nav-item">
           <a class="nav-link" href="/checkouts">
-            <img class="nav-image" src="/images/checkout.svg">
+            <img class="nav-image" src="/images/icons/checkout.svg">
           </a>
         </li>
       </ul>
