--- a/views/checkouts/new.handlebars
+++ b/views/checkouts/new.handlebars
@@ -1,8 +1,8 @@
-{{#if products.length }}
+{{#if checkout.products.length }}
   <div class="row">
 
     <div class="col-sm-5">
-      {{#each products as |product| }}
+      {{#each checkout.products as |product| }}
         <div class="checkout-item my-3">
           <div class="checkout-image-container">
             <a href="/products/{{ product.id }}">
@@ -27,7 +27,7 @@
       <div id="total" class="bigger text-danger">
         Total:
       </div>
-      <span class="bigger text-danger">{{currency total}}</span>
+      <span class="bigger text-danger">{{currency checkout.total}}</span>
     </div>
 
     <div class="offset-sm-1 col-sm-6">
@@ -122,7 +122,7 @@
             <script
               src="https://checkout.stripe.com/checkout.js"
               class="stripe-button"
-              data-key="{{ STRIPE_PK }}"
+              data-key="{{ checkout.STRIPE_PK }}"
               data-amount="{{stripeTotal}}"
               data-name="Stripe Node Test"
               data-description="Widget"
