--- a/views/products/index.handlebars
+++ b/views/products/index.handlebars
@@ -18,8 +18,8 @@
     <option value="price DESC">Most Expensive</option>
     <option value="name">Alphabetical</option>
     <option value="name DESC">Reverse Alphabetical</option>
-    <option value="created">Newest</option>
-    <option value="created DESC">Oldest</option>
+    <option value='"createdAt"'>Newest</option>
+    <option value='"createdAt" DESC'>Oldest</option>
   </select>
   <input type="submit" class="btn btn-danger mx-1 my-2" value="Search">
 </form>
