--- a/views/products/index.handlebars
+++ b/views/products/index.handlebars
@@ -1,5 +1,5 @@
-<header class="page-header">
-  <h1 class="mb-4">Products</h1>
+<header class="page-header mb-4">
+  <h1>Products</h1>
 </header>
 
 <form class="form-inline mb-3" action="{{ productsPath }}" method="get">
