--- a/views/layouts/application.handlebars
+++ b/views/layouts/application.handlebars
@@ -10,7 +10,7 @@
   <script src="https://code.jquery.com/jquery-3.2.1.min.js" integrity="sha256-hwg4gsxgFZhOsEEamdOYGBf13FyQuiTwlAQgxVSNgt4=" crossorigin="anonymous"></script>
 
   {{!-- Bootstrap --}}
-  <link rel="stylesheet" href="https://bootswatch.com/yeti/bootstrap.min.css">
+  <link rel="stylesheet" href="https://bootswatch.com/flatly/bootstrap.min.css">
 
   {{!-- FontAwesome --}}
   <link rel="stylesheet" href="http:////netdna.bootstrapcdn.com/font-awesome/3.2.1/css/font-awesome.min.css">
