--- a/views/products/index.handlebars
+++ b/views/products/index.handlebars
@@ -11,19 +11,13 @@
           <h4><a href="{{ productPath product.id }}">{{ product.name }}</a></h4>
           <p>${{ product.price }}</p>
           <p>Department: {{ product.Category.name }}</p>
-          {{!--<p>{{ profile.age }} years old</p>--}}
-          {{!--<p>Lives {{profile.Location.distance}} miles from {{profile.Location.City.name}}</p>--}}
-          {{!--<form action="{{ likesPath }}" method="post">--}}
-            {{!--<input type="hidden" name="likee" value="{{ profile.id }}">--}}
-            {{!--<button class="form-control like-button">Like</button>--}}
-          {{!--</form>--}}
         </div>
       </div>
     {{/each}}
   </div>
   {{else }}
   <div class="row">
-    <h3>Sorry, no users could be found! Try a different search?</h3>
+    <h3>Sorry, no products could be found! Try a different search?</h3>
   </div>
   {{/if }}
 </div>
