--- a/views/products/search.handlebars
+++ b/views/products/search.handlebars
@@ -23,10 +23,24 @@
             {{/each }}
           </select>
         </div>
-        <input type="submit" class="btn btn-primary btn-block">
+        <button type="submit" class="btn btn-primary btn-block" value="Submit">Search</button>
       </form>
     </div>
     <div class="col-md-6">
+      <form action="{{ productsPath }}" method="get">
+        <div class="form-group">
+          <label for="sort">Sort By:</label>
+          <select class="form-control" name="sort" id="sort">
+            <option value="name ASC">Name Ascending</option>
+            <option value="name DESC">Name Descending</option>
+            <option value="price ASC">Price Ascending</option>
+            <option value="price DESC">Price Descending</option>
+            <option value="&quot;updatedAt&quot; ASC">Newest Ascending</option>
+            <option value="&quot;updatedAt&quot; DESC">Newest Descending</option>
+          </select>
+        </div>
+        <button type="submit" class="btn btn-primary btn-block" value="Submit">Sort</button>
+      </form>
     </div>
   </div>
 </div>
