--- a/public/styles/styles.css
+++ b/public/styles/styles.css
@@ -61,3 +61,28 @@ h1 {
   padding-bottom: 1em;
   border-bottom: solid 2px #666;
 }
+
+.add-to-cart a {
+  color: white;
+  text-decoration: none;
+}
+
+.cart-box {
+  border: solid 3px #AAA;
+  border-radius: 10px;
+  padding: 1em;
+  margin-bottom: 1em;
+}
+
+.cart-box img {
+  max-height: 300px;
+  max-width: 200px;
+  border: solid 1px #AAA;
+  border-radius: 5px;
+  margin-top: 1.2em;
+  padding: 1.5em;
+}
+
+.cart-summary button {
+  margin-top: 1em;
+}
