--- a/views/products/index.handlebars
+++ b/views/products/index.handlebars
@@ -11,7 +11,12 @@
           <h4><a href="{{ productPath product.id }}">{{ product.name }}</a></h4>
           <p>${{ product.price }}</p>
           <p>Department: {{ product.Category.name }}</p>
-          <button class="btn btn-primary add-to-cart">Add to Cart</button>
+
+          {{#if (cartHasProduct product.id @root.session.cart.products)}}
+            <a href="{{ cartShowPath }}"><button class="btn btn-success add-to-cart">Edit in Cart</button></a>
+          {{else }}
+            <a href="{{ cartPath product.id }}?quantity=1"><button class="btn btn-primary add-to-cart">Add to Cart</button></a>
+          {{/if}}
         </div>
       </div>
     {{/each}}
