--- a/views/products/show.handlebars
+++ b/views/products/show.handlebars
@@ -11,7 +11,7 @@
       <p>Category: {{ currentProduct.Category.name }}</p>
       <h3>Description</h3>
       <p>{{ currentProduct.description }}</p>
-      <button class="btn btn-primary add-to-cart">Add to Cart</button>
+      <a href="{{ cartPath currentProduct.id }}?quantity=1"><button class="btn btn-primary add-to-cart">Add to Cart</button></a>
     </div>
   </div>
   <h3>Related Products: </h3>
@@ -24,7 +24,7 @@
           <h4><a href="{{ productPath product.id }}">{{ product.name }}</a></h4>
           <p>${{ product.price }}</p>
           <p>Department: {{ product.Category.name }}</p>
-          <button class="btn btn-primary add-to-cart">Add to Cart</button>
+          <a href="{{ cartPath product.id }}?quantity=1"><button class="btn btn-primary add-to-cart">Add to Cart</button></a>
         </div>
       </div>
     {{/each}}
