--- a/views/cart/index.handlebars
+++ b/views/cart/index.handlebars
@@ -36,12 +36,12 @@
         <a href="{{ cartShowPath }}?_method=delete"><button class="btn btn-danger btn-block">Clear Cart</button></a>
       </div>
       <div class="col-md-3">
-        <a href="#"><button class="btn btn-info btn-block">Check Out</button></a>
+        <a href="{{ checkoutPath }}"><button class="btn btn-info btn-block">Check Out</button></a>
       </div>
     </div>
   {{else }}
   <div class="row">
-    <h3>You haven't added anything to your cart yet!! Try adding something.</h3>
+    <h3>You haven't added anything to your cart yet! Try adding something.</h3>
   </div>
   {{/if }}
 </div>
