--- a/views/products/show.handlebars
+++ b/views/products/show.handlebars
@@ -11,7 +11,11 @@
       <p>Category: {{ currentProduct.Category.name }}</p>
       <h3>Description</h3>
       <p>{{ currentProduct.description }}</p>
-      <a href="{{ cartPath currentProduct.id }}?quantity=1"><button class="btn btn-primary add-to-cart">Add to Cart</button></a>
+      {{#if (cartHasProduct currentProduct.id @root.session.cart.products)}}
+          <a href="{{ cartShowPath }}"><button class="btn btn-success add-to-cart">Edit in Cart</button></a>
+        {{else }}
+          <a href="{{ cartPath currentProduct.id }}?quantity=1"><button class="btn btn-primary add-to-cart">Add to Cart</button></a>
+      {{/if}}
     </div>
   </div>
   <h3>Related Products: </h3>
@@ -24,7 +28,11 @@
           <h4><a href="{{ productPath product.id }}">{{ product.name }}</a></h4>
           <p>${{ product.price }}</p>
           <p>Department: {{ product.Category.name }}</p>
-          <a href="{{ cartPath product.id }}?quantity=1"><button class="btn btn-primary add-to-cart">Add to Cart</button></a>
+          {{#if (cartHasProduct product.id @root.session.cart.products)}}
+            <a href="{{ cartShowPath }}"><button class="btn btn-success add-to-cart">Edit in Cart</button></a>
+          {{else }}
+            <a href="{{ cartPath product.id }}?quantity=1"><button class="btn btn-primary add-to-cart">Add to Cart</button></a>
+          {{/if}}
         </div>
       </div>
     {{/each}}
