--- a/views/shared/_nav.handlebars
+++ b/views/shared/_nav.handlebars
@@ -19,6 +19,7 @@
           <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Menu <span class="caret"></span></a>
           <ul class="dropdown-menu">
             <li><a href="{{ productsPath }}">Products</a></li>
+            <li><a href="{{ checkoutPath }}">Checkout</a></li>
           </ul>
         </li>
       </ul>
