--- a/views/shared/_nav.handlebars
+++ b/views/shared/_nav.handlebars
@@ -15,6 +15,7 @@
     <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
       <ul class="nav navbar-nav navbar-right">
         <li><a href="{{ adminIndexPath }}">Admin</a></li>
+        <li><a href="{{ analyticsPath }}">Analytics</a></li>
         <li><a href="{{ cartShowPath }}">Cart ({{ session.cart.size }})</a></li>
         <li class="dropdown">
           <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Menu <span class="caret"></span></a>
