--- a/views/index.hbs
+++ b/views/index.hbs
@@ -1,2 +1,81 @@
-<h1>{{title}}</h1>
-<p>Welcome to {{title}}</p>
+<div class="row">
+ <div class="col-xs-offset-3">
+    <form class="form-inline" action="/products" method="post">
+      <input type="hidden" name="_action" value="SEARCH">
+      <div class="input-group">
+        <div class="input-group-addon"><span class="glyphicon glyphicon-search "></span></div>
+        <input type="text" name="searchText" placeholder="Search" class="form-control">
+        <span class="input-group-btn">
+          <button type="submit" name="textSearchButton" class="btn btn-primary">Search</button>
+        </span>
+      </div>
+    </form>
+  </div>
+<br>
+  <div class="col-xs-offset-3">
+    <form class="form-inline" action="/products" method="post">
+      <input type="hidden" name="_action" value="FILTER">
+      <div class="input-group">
+
+        <select class="form-control" name="categoryFilter">
+          <option value="" disabled selected>Filter by Category</option>
+          {{#each categories as |category| }}
+            <option value="{{category.id}}">{{category.name}}</option>
+          {{/each}}
+        </select>
+            </div>
+            <div class="input-group">
+        <select class="form-control" name="minPriceFilter">
+          <option value="" disabled selected>Min Price</option>
+          {{#each prices as |price|}}
+            <option value="{{price}}">{{price}}</option>
+          {{/each}}
+        </select>
+      </div>
+      <div class="input-group">
+        <select class="form-control" name="maxPriceFilter">
+          <option value="" disabled selected>Max Price</option>
+          {{#each prices as |price|}}
+            <option value="{{price}}">{{price}}</option>
+          {{/each}}
+        </select>
+      </div>
+      <div class="input-group">
+        <select class="form-control" name="orderBy">
+          <option value="prodNameAsc">Product Name Ascending</option>
+          <option value="prodNameDesc">Product Name Descending</option>
+          <option value="prodPriceAsc">Product Price Ascending</option>
+          <option value="prodPriceDesc">Product Price Descending</option>
+          <option value="prodNew">Newest Products</option>
+          <option value="prodOld">Oldest Products</option>
+        </select>
+      </div>
+        <button type="submit" name="filterButton" class="btn btn-primary">Filter and Sort</button>
+    </form>
+  </div>
+</div>
+
+
+
+<br><br><br>
+
+<div class="row">
+  {{#each products as |product| }}
+  <div class="col-xs-3">
+  <div class="panel panel-default" style="width:250px;height:340px;">
+    <div class="panel-heading" style="text-align: center;">
+      {{product.name}}
+    </div>
+    <div class="panel-body" style="text-align: center;">
+      <img src="{{product.image}}" alt="Image: {{product.name}}" class="img-rounded" style="width:150px;height:150px;">
+      <h5>${{product.price}}</h5>
+      <h5>{{product.name}}</h5>
+      <h6>{{product.Category.name}}</h6>
+      <form class="" action="/products" method="post">
+        <button type="submit" name="addToCart" class="btn btn-primary">Add to Cart</button>
+      </form>
+    </div>
+  </div>
+</div>
+  {{/each}}
+</div>
