--- a/views/index.hbs
+++ b/views/index.hbs
@@ -1,5 +1,8 @@
 <div class="row">
- <div class="col-xs-offset-3">
+
+   <div class="center-form">
+
+
     <form class="form-inline" action="/products" method="post">
       <input type="hidden" name="_action" value="SEARCH">
       <div class="input-group">
@@ -11,8 +14,9 @@
       </div>
     </form>
   </div>
+
 <br>
-  <div class="col-xs-offset-3">
+  <div class="center-form">
     <form class="form-inline" action="/products" method="post">
       <input type="hidden" name="_action" value="FILTER">
       <div class="input-group">
