--- a/views/shared/_nav.hbs
+++ b/views/shared/_nav.hbs
@@ -6,10 +6,13 @@
     </a>
   </div>
 
-
+  <ul class="nav navbar-nav navbar-right">
+    <li><p class="navbar-text navbar-right navbar-padding"> <a href="/products"><span class="glyphicon glyphicon-th"></span></a> </p>
+    </li>
+  </ul>
 
   <ul class="nav navbar-nav navbar-right">
-    <li><p class="navbar-text navbar-right navbar-padding"> <a href="/products">Products</a> </p>
+    <li><p class="navbar-text navbar-right navbar-padding"> <a href="/cart"><span class="glyphicon glyphicon-shopping-cart">({{cart_count}})</span></a> </p>
     </li>
   </ul>
 
