--- a/views/product/detail.hbs
+++ b/views/product/detail.hbs
@@ -17,9 +17,14 @@
       <br>
       <p>{{product.description}}</p>
       <br><br>
-      <form class="" action="/cart/add/{{product.id}}" method="post">
-        <input type="hidden" name="_method" value="PUT">
-        <button type="submit" name="addToCart" class="btn btn-primary">Add to Cart</button>
+      {{#if product.inCart}}
+        <form class="" action="/cart" method="get">
+          <button type="submit" class="btn btn-success">Edit Cart</button>
+      {{else}}
+        <form class="" action="/cart/add/{{product.id}}" method="post">
+          <input type="hidden" name="_method" value="PUT">
+          <button type="submit" class="btn btn-primary">Add to Cart</button>
+      {{/if}}
       </form>
     </div>
 
@@ -46,9 +51,14 @@
         <a href="/products/detail/{{product.id}}"><h5>{{product.name}}</h5></a>
 
         <h6>{{product.Category.name}}</h6>
-        <form class="" action="/cart/add/{{product.id}}" method="post">
-          <input type="hidden" name="_method" value="PUT">
-          <button type="submit" name="addToCart" class="btn btn-primary">Add to Cart</button>
+        {{#if product.inCart}}
+          <form class="" action="/cart" method="get">
+            <button type="submit" class="btn btn-success">Edit Cart</button>
+        {{else}}
+          <form class="" action="/cart/add/{{product.id}}" method="post">
+            <input type="hidden" name="_method" value="PUT">
+            <button type="submit" class="btn btn-primary">Add to Cart</button>
+        {{/if}}
         </form>
       </div>
     </div>
